--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -57,3 +57,13 @@
     font-weight: 800;
 }
 
+.header__optionCart{
+    display: flex;
+    align-items: center;
+    color:white;
+}
+
+.header__cartCount{
+    margin-left: 10px;
+    margin-right: 10px;
+}
